<resources>
    <string name="app_name">VKPlayer</string>

    <string name="action_cache">Сохранить</string>
    <string name="action_delete_from_cache">Удалить из сохраненных</string>
    <string name="action_remove_from_list">Удалить из списка</string>
    <string name="action_play">Играть</string>
    <string name="action_add_to_playlist">Добавить в текущий плейлист</string>
    <string name="snackbar_add_to_playlist">Аудиозаписи добавлены в текущий плейлист</string>
    <string name="snackbar_cancel">Отменить</string>
    <string name="title_activity_list">Список</string>
    <string name="title_activity_login">Авторизация</string>

    <string name="title_button_login_vk">Войти через VK</string>
    <string name="title_button_github">Github/IRA-Team</string>

    <string name="navigation_drawer_open">Открыть</string>
    <string name="navigation_drawer_close">Закрыть</string>
    <string name="navigation_drawer_current_playlist">Текущий плейлист</string>
    <string name="navigation_drawer_my_audio">Мои аудиозаписи</string>
    <string name="navigation_drawer_recommendation">Рекомендации</string>
    <string name="navigation_drawer_popular">Популярное</string>
    <string name="navigation_drawer_downloaded">Сохраненные</string>
    <string name="navigation_drawer_settings">Настройки</string>
    <string name="navigation_drawer_exit">Сменить профиль</string>

    <string name="title_menu_sort">Сортировка</string>
    <string name="title_menu_sort_done">Завершить сортировку</string>
    <string name="title_menu_search">Поиск</string>

    <string name="error_load">Ошибка загрузки</string>
    <string name="error_no_internet_connection">Отсутствует соединение с интернетом</string>
    <string name="error_no_wifi_connection">Отсутствует соединение с Wi-Fi</string>
    <string name="error_load_user_from_cache">Ошибка загрузки пользователя с кеша</string>
    <string name="title_snackbar_action">Повторить</string>

    <string name="notification_previous">Предыдущая</string>
    <string name="notification_pause">Пауза</string>
    <string name="notification_resume">Возобновить</string>
    <string name="notification_next">Следующая</string>

    <string name="notification_sync">Синхронизация</string>
    <string name="notification_download">Сохранение</string>
    <string name="notification_cancel">Остановить</string>

    <string name="title_activity_settings">Настройки</string>
    <string name="pref_sync_enabled">Синхронизация</string>
    <string name="pref_sync_wifi">Синхронизация через Wi-Fi</string>
    <string name="pref_sync_count">Количество аудио</string>
    <string name="pref_header_sync_title">Синхронизация</string>
    <string name="pref_sync_time">Время синхронизации</string>
    <string name="pref_sync_time_default">18:30</string>
    <string name="pref_sync_button">Синхронизировать</string>
    <string name="pref_header_cache_title">Кеш</string>
    <string name="pref_cache_clear">Очистить кеш</string>
    <string name="cache_clear_complete">Кеш очищен</string>

    <string name="empty_list">Список пустой</string>

    <string name="notification_error_sync_title">Ошибка синхронизации</string>
    <string name="notification_successful_sync">Синхронизация завершена</string>
    <string name="notification_successful_sync_count">Синхронизировано аудиозаписей: </string>
    <string name="notification_error_sync_message">Произошла ошибка во время синхронизации</string>

    <string name="notification_error_download_title">Ошибка сохранения</string>
    <string name="notification_successful_download">Сохранение завершено</string>
    <string name="notification_successful_download_count">Сохранено аудиозаписей: </string>
    <string name="notification_error_download_message">Произошла ошибка во время загрузки</string>

    <string name="notification_audio_count_left">Осталось: </string>

    <string name="clear_cache_dialog_title">Пожалуйста, подтвердите</string>
    <string name="clear_cache_dialog_text">Вы уверены, что хотите удалить все сохраненные аудиозаписи?</string>

    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="ok">ОК</string>
    <string name="cancel">Отмена</string>

    <string name="pref_timer_off_title">Таймер отключения</string>
    <string name="pref_timer_off_enabled">Таймер</string>
    <string name="action_play_next">Играть следующим</string>
    <string name="navigation_drawer_local">Локальные</string>
    <string name="title_menu_scan">Сканировать</string>
    <string name="unknown_artist">Неизвестный исполнитель</string>
    <string name="scanning">Сканирование</string>
    <string name="remove_file">Удалить файл</string>
    <string name="local_audio_remove_warning">Вы уверены, что хотите удалить эти файлы?</string>
    <string name="unknown_title">Неизвестное имя</string>
    <string name="title">Название</string>
    <string name="artist">Исполнитель</string>
    <string name="length">Длинна</string>
    <string name="title_select_language">Select language</string>
    <string name="permission_required_to_scan">Permission required to scan</string>
    <string name="permission_required_to_remove">Permission required to remove</string>
    <string name="title_sync_audio_count">Audio count to sync</string>
    <string name="error_wrong_number_format">Wrong number format</string>
    <string name="error_sync_count_must_be_greater">Sync count must be greater than </string>

</resources>
