<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.irateam.vkplayer.activities.ListActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/title_menu_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_white_24dp"
        android:title="@string/title_menu_sort"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_sort_done"
        android:icon="@drawable/ic_done_white_24dp"
        android:title="@string/title_menu_sort_done"
        android:visible="false"
        app:showAsAction="always" />
</menu>
