<!--
  ~ Copyright (C) 2016 IRA-Team
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".activity.MainActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/title_menu_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView"/>

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_white_24dp"
        android:title="@string/title_menu_sort"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_sort_done"
        android:icon="@drawable/ic_done_white_24dp"
        android:title="@string/title_menu_sort_done"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_scan"
        android:icon="@drawable/ic_done_white_24dp"
        android:title="@string/title_menu_scan"
        app:showAsAction="never"/>

</menu>
