<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/inbox"
            android:checked="false"
            android:icon="@drawable/ic_navigation_drawer_mysound_grey_18dp"
            android:title="@string/navigation_drawer_my_audio" />

        <item
            android:id="@+id/starred"
            android:checked="false"
            android:icon="@drawable/ic_navigation_drawer_like_grey_18dp"
            android:title="@string/navigation_drawer_recomendation" />

        <item
            android:id="@+id/sent_mail"
            android:checked="false"
            android:icon="@drawable/ic_navigation_drawer_star_grey_18dp"
            android:title="@string/navigation_drawer_popular" />

        <item
            android:id="@+id/drafts"
            android:checked="false"
            android:icon="@drawable/ic_navigation_drawer_download_grey_18dp"
            android:title="@string/navigation_drawer_downloaded" />
    </group>
</menu>