<!--
  ~ Copyright (C) 2016 IRA-Team
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="56dp"
              android:background="@color/primary"
              android:orientation="horizontal"
              android:paddingLeft="@dimen/padding_normal"
              android:paddingRight="@dimen/padding_normal">

    <TextView
        android:id="@+id/sort_by_title"
        style="@style/SortModeItem"
        android:drawableTop="@drawable/wrapper_ic_audio_title_white_24px"
        android:text="@string/title"/>

    <TextView
        android:id="@+id/sort_by_artist"
        style="@style/SortModeItem"
        android:drawableTop="@drawable/wrapper_ic_audio_artist_white_24px"
        android:text="@string/artist"/>

    <TextView
        android:id="@+id/sort_by_length"
        style="@style/SortModeItem"
        android:drawableTop="@drawable/wrapper_ic_audio_length_white_24px"
        android:text="@string/length"/>

</LinearLayout>